# vocabulari.es

./: .gitignore  Makefile  mkdocs.yml  pyproject.toml
docs/: base.yaml  categories.ttl  context.json  context.yaml  header.md  index.md  octa.n3  octa.ttl  property.yaml
docs/logic/: ontology-term.yaml  term-template.yaml
docs/owl/: equivalentclass.md  equivalentproperty.md  functionalproperty.md  index.md  inverseof.md  owl.ttl  reflexiveproperty.md  sameas.md  symmetricproperty.md  transitiveproperty.md
docs/rdf/: categories.ttl  index.md  object.md  predicate.md  property.md  statement.md  subject.md  type.md
docs/rdfs/: categories.n3  categories.ttl  comment.md  container.md  container_membership.md  context.yaml  datatype.md  domain.md  index.md  inference.md  is_subproperty_of.md  isdefinedby.md  label.md  literal.md  member.md  range.md  resource.md  seealso.md  subclass_of.md  subclassof.md  subpropertyof.md
inference/: inference-tomaszuk.sparql  term.sparql  title.sparql  vocabulary.sparql
queries/: vocabularies.sparql
queries/inference/: groups.sparql  rules.sparql
queries/macros/: statements.sparql  triple_element.sparql
queries/patterns/: list.sparql
queries/term/: domain_and_range.sparql  header.sparql  instanceof.sparql  is_property.sparql  link.sparql  meta.sparql  property.sparql  see_also.sparql  superclasses.sparql
queries/vocabulary/: cards_per_category.sparql  categories.sparql  header.sparql
templates/: inference.html  macros.html  patterns.html  property.html  term.html  vocabulary.html
templates/includes/: navbar-term.html  (+1 more)
(+41 files in other folders)
