[tool.poetry]
name = "vocabulari.es"
version = "0.0.1"
description = "https://vocabulari.es/"
authors = ["Anatoly Scherbakov <altaisoft@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
octadocs = "^0.0.19"
mkdocs-semantic = {git = "https://github.com/cryocaustik/mkdocs-semantic.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
